Agregue Modal al proyecto

--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,19 @@
-i{
-    color: black;
+*{
+    margin: 0%;
+    padding: 0%;
 }
 
-.containerCart{
-    width: 100px;
-    height: 100px;
+i {
+    background-color: red;
+}
+
+
+
+.iconos {
+    font-size: 10px;
+    color: "white";
+}
+
+.ContainerModal{
+    justify-content: end;
 }
